# vscode-msvc-config

./: .gitignore  BUILD.gn  MyApp.sln  MyApp.vcxproj  MyApp.vcxproj.filters  README.md  main.c
Win32/Debug/: MyApp.exp  MyApp.ilk  MyApp.lib  vc142.idb
Win32/Debug/MyApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyApp.lastbuildstate  MyApp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
hlsl/: solid.ps.hlsl  solid.vs.hlsl
inc/: cwindow.h  windowz.h
src/: Graphics.h  GraphicsD3D11.cpp  GraphicsD3D11.h  PGraphics.cpp  PGraphics.h  PLogger.cpp  PLogger.h  PMainWindow.cpp  PMainWindow.h  PMath.h  PObject.cpp  PObject.h  PWindow.cpp  PWindow.h  cmainwindow.cpp  cmainwindow.h  cwindow.cpp  cwindow.h  cwindowmanager.cpp  cwindowmanager.h  main.cpp  windowz.cpp
