shared_library("Utils") {
  sources = [
    "//src/PObject.cpp",
  ]

  include_dirs = [
    "//src",
    "//inc",
  ]
}

executable("App") {
  sources = [
    # "//src/GraphicsD3D11.cpp",
    "//src/PGraphics.cpp",
    "//src/PMainWindow.cpp",
    "//src/PWindow.cpp",
    "//src/main.cpp",
  ]

  include_dirs = [
    "//src",
    "//inc",
    "//DirectXTK//Inc",
  ]

  if (is_windows) {
    libs = [
      "dxgi.lib",
      "d3d11.lib",
    ]
  }

  ldflags = [ "$default_output_dir/Utils.lib" ]
}
