shared_library("Utils") {
  sources = [
    "//src/PLogger.cpp",
    "//src/PObject.cpp",
  ]

  include_dirs = [
    "//src",
    "//inc",
  ]
}

shared_library("Graphics") {
  sources = [
    "//src/GraphicsD3D11.cpp",
  ]

  include_dirs = [
    "//src",
    "//inc",
    "//DirectXTX//Inc"
  ]

  if (is_windows) {
    libs = [
      "dxgi.lib",
      "d3dcompiler.lib",
      "d3d11.lib",
    ]
  }

  cflags_cc = [ "/wd4251" ]
  ldflags = [ "$default_output_dir/Utils.lib" ]
}

executable("App") {
  sources = [
    # "//src/GraphicsD3D11.cpp",
    "//src/PGraphics.cpp",
    "//src/PMainWindow.cpp",
    "//src/PWindow.cpp",
    "//src/main.cpp",
  ]

  include_dirs = [
    "//src",
    "//inc",
    "//DirectXTK//Inc",
  ]

  if (is_windows) {
    libs = [
      "dxgi.lib",
      "d3dcompiler.lib",
      "d3d11.lib",
    ]
  }

  cflags_cc = [ "/wd4251" ]
  ldflags = [
    "$default_output_dir/Utils.lib",
    "$default_output_dir/Graphics.lib",
  ]
}
