shared_library("Utils") {
  sources = [
    "//src/PLogger.cpp",
  ]
  include_dirs = [
    "//src",
    "//inc",
  ]
}

shared_library("Graphics") {

  sources = [
    "//src/PGraphics.cpp",
  ]

  include_dirs = [
    "//inc",
    "//src",
    "//DirectXTK/Inc", 
  ]

  if (is_windows) {
    libs = [
      "dxgi.lib",
      "d3dcompiler.lib",
      "d3d11.lib",
    ]
  }

  data_deps = [ ":Utils" ]
  
  cflags_cc = [ "/wd4251" ]
  ldflags = [ "$default_output_dir/Utils.lib" ]
}

executable("App") {
  sources = [
    "//src/PMainWindow.cpp",
    "//src/PWindow.cpp",
    "//src/main.cpp",
  ]

  include_dirs = [
    "//DirectXTK/Inc", 
    "//src",
    "//inc",
  ]

  if (is_windows) {
    libs = [
      "dxgi.lib",
      "d3dcompiler.lib",
      "d3d11.lib",
    ]
  }

  cflags_cc = [ "/wd4251" ]
  data_deps = [ ":Utils", ":Graphics" ]
  
  ldflags = [
    "$default_output_dir/Utils.lib",
    "$default_output_dir/Graphics.lib",
  ]
}